--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   "devDependencies": {
     "browser-sync": "^1.6.3",
     "chalk": "^0.5.1",
-    "connect": "^2.14.4",
-    "connect-livereload": "^0.4.0",
     "gulp": "^3.6.0",
     "gulp-autoprefixer": "^0.0.7",
     "gulp-bower-files": "^0.2.1",
-    "gulp-cache": "^0.1.1",
     "gulp-clean": "^0.2.4",
+    "gulp-connect": "^2.2.0",
     "gulp-csso": "^0.2.6",
     "gulp-filter": "^0.4.1",
     "gulp-flatten": "^0.0.2",
@@ -41,7 +39,6 @@
     "q": "^1.0.1",
     "run-sequence": "^1.0.1",
     "shelljs": "^0.3.0",
-    "wiredep": "^1.4.3",
     "yargs": "^1.3.1"
   },
   "engines": {
