[Kerry] fix gulpfile.js serve:dist issue & clean code for gulpfile

--- a/.jshintrc
+++ b/.jshintrc
@@ -21,6 +21,7 @@
         "Swiper": true,
         "window": true,        
         "Modernizr": true,
-        "jQuery": true
+        "jQuery": true,
+        "$": true
   }
 }
