--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
     "gulp-bower-files": "^0.2.1",
     "gulp-clean": "^0.2.4",
     "gulp-connect": "^2.2.0",
-    "gulp-csso": "^0.2.6",
     "gulp-filter": "^0.4.1",
     "gulp-flatten": "^0.0.2",
     "gulp-htmlmin": "^0.2.0",
+    "gulp-if": "^1.2.5",
     "gulp-imagemin": "^0.5.0",
     "gulp-jshint": "^1.5.3",
     "gulp-karma": "^0.0.4",
     "gulp-livereload": "^1.2.0",
     "gulp-load-plugins": "^0.5.0",
+    "gulp-minify-css": "^0.3.11",
     "gulp-ruby-sass": "^0.4.3",
     "gulp-size": "^0.3.0",
     "gulp-uglify": "^0.2.1",
-    "gulp-useref": "^0.4.2",
+    "gulp-useref": "^1.0.2",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.4",
