--- a/.jshintrc
+++ b/.jshintrc
@@ -22,6 +22,7 @@
         "window": true,        
         "Modernizr": true,
         "jQuery": true,
-        "$": true
+        "$": true,
+        "html2canvas": true
   }
 }
