--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "gulp": "^3.6.0",
     "gulp-autoprefixer": "^0.0.7",
     "gulp-bower-files": "^0.2.1",
-    "gulp-clean": "^0.2.4",
     "gulp-connect": "^2.2.0",
     "gulp-filter": "^0.4.1",
     "gulp-flatten": "^0.0.2",
@@ -26,6 +25,7 @@
     "gulp-load-plugins": "^0.5.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-rev": "^2.0.1",
+    "gulp-rimraf": "^0.1.1",
     "gulp-ruby-sass": "^0.4.3",
     "gulp-size": "^0.3.0",
     "gulp-uglify": "^0.2.1",
