--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "html2canvas": "~0.4.1",
     "backbone": "~1.1.2",
     "backbone.marionette": "~2.2.2",
-    "handlebars": "~2.0.0"
+    "handlebars": "~2.0.0",
+    "json2": "*"
   }
 }
